--- a/your-discord-bot/.gitignore
+++ b/your-discord-bot/.gitignore
@@ -1,1 +1,14 @@
+# Node modules (never commit)
+node_modules/
 
+# Environment variables (local only)
+.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS junk
+.DS_Store
+Thumbs.db
