--- a/bot/package.json
+++ b/bot/package.json
@@ -1,1 +1,13 @@
-
+{
+  "name": "discord-bot",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "discord.js": "^14.14.1",
+    "express": "^4.18.2"
+  }
+}
