--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "discord-bot",
+  "name": "tsvm-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1",
+    "discord.js": "^14.12.0",
     "express": "^4.18.2"
   }
 }
